--- a/ContactListView/ContactListView/Resource/Base.lproj/Main.storyboard
+++ b/ContactListView/ContactListView/Resource/Base.lproj/Main.storyboard
@@ -1011,6 +1011,57 @@
             </objects>
             <point key="canvasLocation" x="3673.913043478261" y="-84.375"/>
         </scene>
+        <!--Story Image Details View Controller-->
+        <scene sceneID="iL8-9X-wiM">
+            <objects>
+                <viewController storyboardIdentifier="StoryImageDetailsViewController" id="36S-Zm-HqF" customClass="StoryImageDetailsViewController" customModule="ContactListView" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vie-XY-RYC">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="17D-1Y-KIA">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cU9-OA-2sB">
+                                <rect key="frame" x="344" y="68" width="46" height="46"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="multiply" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="C6d-RF-W9i">
+                                        <rect key="frame" x="7" y="10" width="32" height="25.5"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="32" id="gdL-K6-SdG"/>
+                                            <constraint firstAttribute="height" constant="32" id="qYJ-rC-Xto"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="46" id="5dj-fy-wb8"/>
+                                    <constraint firstItem="C6d-RF-W9i" firstAttribute="centerX" secondItem="cU9-OA-2sB" secondAttribute="centerX" id="Uyc-jd-4oy"/>
+                                    <constraint firstAttribute="width" constant="46" id="gLN-iM-GYu"/>
+                                    <constraint firstItem="C6d-RF-W9i" firstAttribute="centerY" secondItem="cU9-OA-2sB" secondAttribute="centerY" id="jy2-8l-nIE"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="WnG-cv-9a8"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="WnG-cv-9a8" firstAttribute="trailing" secondItem="17D-1Y-KIA" secondAttribute="trailing" id="X7v-2D-h7m"/>
+                            <constraint firstItem="WnG-cv-9a8" firstAttribute="trailing" secondItem="cU9-OA-2sB" secondAttribute="trailing" constant="24" id="a0U-sd-pWy"/>
+                            <constraint firstItem="17D-1Y-KIA" firstAttribute="leading" secondItem="WnG-cv-9a8" secondAttribute="leading" id="mDh-V9-ObX"/>
+                            <constraint firstItem="WnG-cv-9a8" firstAttribute="bottom" secondItem="17D-1Y-KIA" secondAttribute="bottom" id="prm-dq-MBc"/>
+                            <constraint firstItem="17D-1Y-KIA" firstAttribute="top" secondItem="WnG-cv-9a8" secondAttribute="top" id="rKz-b4-aK8"/>
+                            <constraint firstItem="cU9-OA-2sB" firstAttribute="top" secondItem="WnG-cv-9a8" secondAttribute="top" constant="24" id="x45-QY-axZ"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="btnClose" destination="cU9-OA-2sB" id="bzv-ll-214"/>
+                        <outlet property="ivStoryImage" destination="17D-1Y-KIA" id="kMQ-RW-3zm"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="C3b-UR-k6N" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4633" y="-84"/>
+        </scene>
     </scenes>
     <resources>
         <image name="51Lzc4O-iuL" width="334" height="500"/>
@@ -1020,6 +1071,7 @@
         <image name="heart.fill" catalog="system" width="128" height="109"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="message.fill" catalog="system" width="128" height="113"/>
+        <image name="multiply" catalog="system" width="128" height="111"/>
         <image name="photo.fill.on.rectangle.fill" catalog="system" width="128" height="96"/>
         <image name="shoe" width="225" height="225"/>
         <image name="video.fill" catalog="system" width="128" height="82"/>
