--- a/ContactListView/ContactListView/View/Cell/AddStoryCollectionViewCell.xib
+++ b/ContactListView/ContactListView/View/Cell/AddStoryCollectionViewCell.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -54,7 +52,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="k0H-Lc-cb3" secondAttribute="bottom" constant="4" id="71o-Bs-QND"/>
                             <constraint firstAttribute="trailing" secondItem="cak-ZG-cgz" secondAttribute="trailing" id="7jp-09-2To"/>
@@ -72,7 +70,6 @@
                     </view>
                 </subviews>
             </view>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
                 <constraint firstItem="N82-Jv-7Am" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="1" id="2I1-3J-aOS"/>
                 <constraint firstItem="N82-Jv-7Am" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="4" id="58h-f8-g3V"/>
@@ -80,6 +77,7 @@
                 <constraint firstItem="N82-Jv-7Am" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="S9V-3A-oKU"/>
                 <constraint firstAttribute="bottom" secondItem="N82-Jv-7Am" secondAttribute="bottom" constant="4" id="g1y-e0-v6e"/>
             </constraints>
+            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="57" height="95"/>
             <connections>
                 <outlet property="addStoryImage" destination="cak-ZG-cgz" id="wwg-XQ-ke5"/>
@@ -94,8 +92,5 @@
     <resources>
         <image name="41gxXYRYp8L._AC_" width="347" height="500"/>
         <image name="51Lzc4O-iuL" width="334" height="500"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
