--- a/ContactListView/ContactListView/View/Cell/RoomItemCollectionViewCell.xib
+++ b/ContactListView/ContactListView/View/Cell/RoomItemCollectionViewCell.xib
@@ -71,6 +71,7 @@
                 <outlet property="innerView" destination="Aot-No-raE" id="b7y-FE-4gf"/>
                 <outlet property="ivProfileImage" destination="GYQ-U8-Rhz" id="rdr-IS-cTG"/>
                 <outlet property="outerView" destination="SDl-33-QbY" id="0zX-c6-lCo"/>
+                <outlet property="parentView" destination="PQL-VF-W6U" id="RhG-eb-jVd"/>
             </connections>
             <point key="canvasLocation" x="270.28985507246381" y="120.20089285714285"/>
         </collectionViewCell>
