--- a/ContactListView/ContactListView/View/Cell/UserTableViewCell.xib
+++ b/ContactListView/ContactListView/View/Cell/UserTableViewCell.xib
@@ -11,47 +11,47 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="137" id="KGk-i7-Jjw" customClass="UserTableViewCell" customModule="ContactListView" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="96"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="359" id="KGk-i7-Jjw" customClass="UserTableViewCell" customModule="ContactListView" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="268.5"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="96"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="268.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7C8-M1-tlR">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="96"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="268.5"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8bQ-J9-SdJ">
-                                <rect key="frame" x="16" y="8" width="80" height="80"/>
+                                <rect key="frame" x="16" y="8" width="288" height="200"/>
                                 <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="80" id="DEf-Rp-5tH"/>
-                                    <constraint firstAttribute="height" constant="80" id="hyM-eY-38C"/>
+                                    <constraint firstAttribute="height" constant="200" id="E9K-VI-ZuO"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kLg-ha-3GV">
-                                <rect key="frame" x="104" y="24" width="208" height="19.5"/>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FyB-e7-jP9">
-                                <rect key="frame" x="104" y="55" width="208" height="17"/>
+                                <rect key="frame" x="16" y="243.5" width="288" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" systemColor="secondaryLabelColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kLg-ha-3GV">
+                                <rect key="frame" x="16" y="216" width="288" height="19.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="8bQ-J9-SdJ" firstAttribute="top" secondItem="7C8-M1-tlR" secondAttribute="top" constant="8" id="2DV-Ac-434"/>
-                            <constraint firstItem="FyB-e7-jP9" firstAttribute="bottom" secondItem="8bQ-J9-SdJ" secondAttribute="bottom" constant="-16" id="2Uh-HZ-Hoj"/>
-                            <constraint firstItem="kLg-ha-3GV" firstAttribute="top" secondItem="8bQ-J9-SdJ" secondAttribute="top" constant="16" id="8IK-Yy-Lzo"/>
-                            <constraint firstItem="8bQ-J9-SdJ" firstAttribute="leading" secondItem="7C8-M1-tlR" secondAttribute="leading" constant="16" id="JvS-Ch-ZsB"/>
-                            <constraint firstAttribute="trailing" secondItem="FyB-e7-jP9" secondAttribute="trailing" constant="8" id="Pcx-2l-PMA"/>
-                            <constraint firstItem="kLg-ha-3GV" firstAttribute="leading" secondItem="8bQ-J9-SdJ" secondAttribute="trailing" constant="8" id="QYl-kJ-5zj"/>
-                            <constraint firstAttribute="bottom" secondItem="8bQ-J9-SdJ" secondAttribute="bottom" constant="8" id="fsO-kg-BAO"/>
-                            <constraint firstAttribute="trailing" secondItem="kLg-ha-3GV" secondAttribute="trailing" constant="8" id="i37-PO-eng"/>
-                            <constraint firstItem="FyB-e7-jP9" firstAttribute="leading" secondItem="kLg-ha-3GV" secondAttribute="leading" id="tv2-5f-ovn"/>
+                            <constraint firstItem="FyB-e7-jP9" firstAttribute="top" secondItem="kLg-ha-3GV" secondAttribute="bottom" constant="8" id="90O-Q6-5eV"/>
+                            <constraint firstItem="kLg-ha-3GV" firstAttribute="leading" secondItem="8bQ-J9-SdJ" secondAttribute="leading" id="AYL-5D-yzj"/>
+                            <constraint firstItem="kLg-ha-3GV" firstAttribute="top" secondItem="8bQ-J9-SdJ" secondAttribute="bottom" constant="8" id="Jeb-wS-za2"/>
+                            <constraint firstItem="8bQ-J9-SdJ" firstAttribute="top" secondItem="7C8-M1-tlR" secondAttribute="top" constant="8" id="SXP-on-Adb"/>
+                            <constraint firstItem="8bQ-J9-SdJ" firstAttribute="leading" secondItem="7C8-M1-tlR" secondAttribute="leading" constant="16" id="UG0-AW-jmh"/>
+                            <constraint firstAttribute="trailing" secondItem="kLg-ha-3GV" secondAttribute="trailing" constant="16" id="WGe-A9-zfF"/>
+                            <constraint firstAttribute="trailing" secondItem="8bQ-J9-SdJ" secondAttribute="trailing" constant="16" id="clo-fx-9q0"/>
+                            <constraint firstAttribute="bottom" secondItem="FyB-e7-jP9" secondAttribute="bottom" constant="8" id="dhM-jN-Vmx"/>
+                            <constraint firstAttribute="trailing" secondItem="FyB-e7-jP9" secondAttribute="trailing" constant="16" id="hb9-Uh-qKz"/>
+                            <constraint firstItem="FyB-e7-jP9" firstAttribute="leading" secondItem="8bQ-J9-SdJ" secondAttribute="leading" id="rH2-8G-20k"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -68,7 +68,7 @@
                 <outlet property="lblUserEmail" destination="FyB-e7-jP9" id="4QN-my-mEt"/>
                 <outlet property="lblUsername" destination="kLg-ha-3GV" id="abU-I4-yX3"/>
             </connections>
-            <point key="canvasLocation" x="-1.4492753623188408" y="107.47767857142857"/>
+            <point key="canvasLocation" x="-1.4492753623188408" y="181.47321428571428"/>
         </tableViewCell>
     </objects>
     <resources>
